Extend Base64 util, remove sun import from NNTP, fix 250 mesg in SMTP
git-svn-id: https://svn.apache.org/repos/asf/james/server@107573 13f79535-47bb-0310-9956-ffa450edef68